--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,11 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "types": [
+      "jest",
+      "@testing-library/jest-dom",
+      "node"
+    ],
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
